# TechnitionStability

./: .gitignore  README.md  db_backup.sql  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 080c08c0f492_tech_stability_tables.py  e05690bac20b_entities_test_1.py
backend/app/: db.py  main.py
backend/app/api/: infosystem.py
backend/app/entieties/models/: __init__.py  association.py  base.py  catalog.py  hardware.py  software.py  (+3 more)
backend/app/services/: executor.py
backend/tests/: test_infosystem.py  test_notes.py
db/data/: postmaster.opts
db/data/global/: 1260  1262  2671  2672  2676  2677  pg_control  pg_internal.init
db/data/pg_stat/: pgstat.stat
db/data/pg_xact/: 0000
db/grafana/: grafana.db
dump/: db_backup.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  styles.js
frontend/src/components/: Header.js  LoadingScreen.js  SystemDetails.js  SystemSelector.js
src/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 9d2ce33e2fd8_creating_tables.py
src/app/: db.py  main.py
src/app/api/: notes.py
src/app/db/: db.py
src/app/entieties/models/: __init__.py  association.py  base.py  catalog.py  hardware.py  infosystem.py  notes.py  software.py  utilization.py  vendor.py  vm.py
src/app/entieties/schema/: __init__.py  catalog.py  infosystem.py  vendor.py
src/app/services/: crud.py
src/app/services/crud/: fabric.py
src/tests/: conftest.py  test_notes.py
(+140 files in other folders)
