[tool.poetry]
name = "technitionstability"
version = "0.1.0"
description = "Technition Stability FastAPI application"
authors = ["Conty111 <mitj88@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
