[tool.poetry]
name = "technitionstability"
version = "0.1.0"
description = "Technition Stability FastAPI application"
authors = ["Conty111 <mitj88@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
pytest = "^8.2.1"
requests = "^2.32.2"
asyncpg = "^0.29.0"
databases = {extras = ["postgresql"], version = "^0.9.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"